# codejam

./: CMakeLists.txt  horses.cpp
everest/: C-small.out  everest.cpp
googlement/: A-small-practice.in  g.cpp  gv2.cpp
googlement-java/src/com/murano500k/googlement/: Main.java  Utils.java
horse/: Horses-large.out  Horses-small.out  horses.cpp
lastword/: lastword.cpp
leader/: A-large-practice.in  A-large-practice.out  A-small-practice.in  leader.cpp
pancake/: pancake-small.out  pancake.cpp  pancake2.cpp
pflipper/: A-small.out  pflipper.cpp
pixels/: D-small.out  dijkstra.cpp  dijkstra.h  dijkstra2.cpp  dijkstra2.h  pixels.cpp
recipes/: B-large-practice.out  B-small-practice.out  recipes.cpp  v2.cpp
test/: test2.cpp
tidynum/: tidynum.cpp  tidynumLarge.cpp
